# snappy

./: README.md  index.html  snappy.cabal  stack.yaml
app/: Click.hs  Drag.hs  Main.hs  Select.hs  Text.hs
src/: Snap.hs  Snappy.hs
