name:                snappy
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable snappy
  hs-source-dirs:      app, src
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded
  build-depends:       base
                     , ghcjs-base
                     , aeson
                     , text
  default-language:    Haskell2010
